--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,16 +1,136 @@
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&family=Source+Sans+Pro:wght@300;400;500&display=swap');
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 18px;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Dongle', sans-serif;
+}
+
+h1 {
+  font-size: 5vw;
+  font-weight: 700;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --brand-yellow: #ffc107;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+.logo {
+  max-height: 70px;
+}
+
+#navbarNav {
+  justify-content: end;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2);
+}
+
+.navbar-offset {
+  padding-top: 95px;
+}
+
+.all-pets {
+  background-color: #f2f2f2;
+}
+
+.pet {
+  background-color: white;
+  overflow: hidden;
+  display: block;
+  border-radius: 8px;
+  box-shadow: rgba(0, 8px 8px -6px black);
+}
+
+.pet .object-wrap {
+  width: 100%;
+  height: 230px;
+  overflow: hidden;
+}
+
+.pet .text-wrap {
+  padding: 10px;
+  color: #282c34;
+}
+
+.pet .text-wrap p {
+  margin: 0;
+  font-weight: 500;
+  display: block;
+}
+
+.pet:hover {
+  text-decoration: none;
+}
+
+.pet .object-wrap img {
+  transition: 0.1s linear all 0s;
+}
+
+.pet:hover .object-wrap img {
+  transform: scale(1.1);
+  transition: 0.1s linear all 0s;
+}
+
+.pet .text-wrap p span {
+  display: inline-block;
+  margin-left: auto;
+}
+
+.form-search-wrap {
+  padding: 60px 0;
+  background-image: url('https://images.pexels.com/photos/46024/pexels-photo-46024.jpeg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.form-search-wrap label {
+  font-weight: 600;
+}
+
+.img-sizer {
+  height: 230px;
+  width: 100%;
+}
+
+.form-search-wrap::after {
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+}
+
+.relative {
+  position: relative;
+  z-index: 10;
+}
+
+
+@media (min-width: 576px) {
+  .nav-item {
+    margin-left: 5px;
   }
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: rgba(0, 0, 0, 0.9);
 }
 
 .App-header {
